# gECPP

./: .gitignore  CMakeLists.txt  Plane.001.gEMesh  README.md  cube.gETF  cube2.fbx  imgui.ini  skybox.fbx
.github/workflows/: cmake-multi-platform.yml
CoasterBuilder/: main.cpp
CoasterBuilder/Engine/: CoasterWindow.cpp  CoasterWindow.h
CoasterBuilder/Engine/Component/: CameraMovement.h  CoasterEditor.cpp  CoasterEditor.h
CoasterBuilder/Engine/Entity/: Camera.h  Coaster.cpp  Coaster.h  CoasterFlags.h
CoasterBuilder/Resource/Model/: track.glb
CoasterBuilder/Resource/Shader/: Material.h  uber.frag
CoasterBuilder/Resource/Texture/: prototype.pvr
Demo/: DemoWindow.cpp  DemoWindow.h  main.cpp
Demo/Engine/: DemoWindow.cpp  DemoWindow.h
Demo/Engine/Component/: Movement.h  VoxelCamera.cpp  VoxelCamera.h
Demo/Engine/Entity/: AnimatedMeshEntity.h  EmptyColliderEntity.h  FlyCamera.h  PhysicsCube.h  Player.h  StaticMeshEntity.h  VoxelCamera.h
Demo/Engine/Renderer/: VoxelPipeline.cpp  VoxelPipeline.h
Engine/: Prototype.cpp  Prototype.h  Window.cpp  Window.h
Engine/Component/: Behavior.h  Component.h  Cullable.cpp  Cullable.h  Transform.cpp  Transform.h
Engine/Component/Camera/: Camera.cpp  Camera.h  PostProcessEffect.h  RenderTarget.cpp  RenderTarget.h  Settings.h  Timing.h
Engine/Component/MeshRenderer/: DrawCall.h  DrawCall.inl  MeshRenderer.cpp  MeshRenderer.h  SplineRenderer.cpp  SplineRenderer.h
Engine/Component/Physics/: CharacterController.cpp  CharacterController.h  Collider.h  Physics.cpp  Physics.h  RigidBody.cpp  RigidBody.h
Engine/Component/Sound/: Sound.cpp  Sound.h
Engine/Core/: Array.h  AssetManager.h  Binary.cpp  Binary.h  Input.cpp  Input.h  Input.inl  InputState.cpp  KeyboardState.cpp  KeyboardState.h  KeyboardState.inl  Log.cpp  Log.h  Macro.h  Manager.h  Manager.inl  MouseState.h  Pointer.h  RelativePointer.h  TickHandler.h  UUID.h  VR.cpp  VR.h  WindowState.h
Engine/Core/Converter/: GLTFLoader.cpp  MeshLoader.cpp  MeshLoader.h  MeshUtility.h  MeshUtility.inl  PVR.cpp  PVR.h  Vertex.h
Engine/Core/GUI/: Editor.cpp  Editor.h  Editor.inl  Field.h  Field.inl  GUI.cpp  GUI.h
Engine/Core/Material/: Material.cpp  Material.h  PBRMaterial.h  Shader.h  Uniform.h
Engine/Core/Math/: Math.h  Spline.h  Spline.inl  Transform.h
Engine/Core/Mesh/: Mesh.cpp  Mesh.h  Skeleton.cpp  Skeleton.h  Skeleton.inl
Engine/Core/Pipeline/: Buffers.h  DefaultPipeline.cpp  DefaultPipeline.h  SDFPipeline.cpp  SDFPipeline.h  VRPipeline.cpp  VRPipeline.h  VoxelPipeline.cpp  VoxelPipeline.h
Engine/Core/Serializable/: Asset.cpp  Asset.h  Asset.inl  Field.h  Field.inl  IO.h  IO.inl  Macro.h  Prototype.h  Reflectable.cpp  Reflectable.h  Reflectable.inl  Serializable.h  Serializable.inl
Engine/Entity/: CubemapCapture.cpp  CubemapCapture.h  EditorCamera.cpp  EditorCamera.h  Entity.cpp  Entity.h  Layer.h  SDFCapture.cpp  SDFCapture.h  VoxelCapture.cpp  VoxelCapture.h
Engine/Entity/Light/: AreaLight.h  DirectionalLight.h  Light.cpp  Light.h  PointLight.h
Engine/Graphics/: Graphics.h
Engine/Graphics/Buffer/: Buffer.h  Buffer.inl  VAO.cpp  VAO.h  VAOSettings.h
Engine/Graphics/Shader/: Preprocessor.cpp  Preprocessor.h  Shader.cpp  Shader.h  ShaderStageType.h
Engine/Physics/: Physics.h  Shapes.cpp  Shapes.h  Shapes.inl
Resource/: gE.pvr  imgui.ini
Resource/Model/: Armature.SKEL  Cube.001.vao  Cube.mesh  FNX45_Tactical.glb  Interesting Cube.MESH  Interesting Cube.fbx  Plane.001.gEMesh  Plane.001.mesh  Plane.001.vao  Plane.mesh  Room.mesh  Soldier_body.MESH  Sphere.mesh  anim-idle.ANIM  animated cube.glb  animated cube.gltf  cube.gETF  demo.fbx  imgui.ini  interesting cube.glb  interesting cube.gltf  skybox.gEMesh  skybox.gETF
Resource/Shader/: blit.frag  blit.vert  bloom.comp  bone.vert  brdf.comp  exposure.comp  missing.frag  skybox.frag  skybox.vert  taa.comp  tonemap.comp  uber.frag  uber.vert  voxel.comp  wireframe.vert
Resource/Sound/: Master.bank  Master.strings.bank
Resource/Texture/: cobble_armd.pvr  cobble_col.TEX2  cobble_col.pvr  cobble_nor.pvr  editor_icons.pvr  fnx_mag_armd.pvr  fnx_mag_col.pvr  fnx_mag_nor.pvr  grass_armd.pvr  grass_col.pvr  grass_nor.pvr  imgui.ini  marble_amr.pvr  swat_col.pvr  swat_head_col.pvr  tile_amr.pvr  tile_armd.TEX2  tile_armd.pvr  tile_col.TEX2  x.TEX2
Resource/UI/: main.gECSS  main.gEUI
gECPP/: Array.h  AssetManager.h  ComponentManager.h  DefaultPipeline.h  MemoryPool.h  Prototype.cpp  Prototype.h  Window.cpp  Window.h
gECPP/Asset/: AssetManager.h  ComponentManager.h  File.cpp  File.h  MemoryPool.h  Mesh.cpp  Mesh.h  Prototype.h
gECPP/Component/: Behavior.h  Component.h  Cullable.cpp  Cullable.h  Transform.cpp  Transform.h
gECPP/Components/: Component.h  Transform.cpp  Transform.h
gECPP/Engine/: Array.h  AssetManager.h  ComponentManager.h  Manager.h  MemoryPool.h  Window.cpp  Window.h  WindowState.h
gECPP/Entity/: Camera.cpp  Camera.h  CubemapCapture.cpp  CubemapCapture.h  Entity.cpp  Entity.h  Layer.h  MeshRenderer.cpp  MeshRenderer.h  SDFCapture.cpp  SDFCapture.h  VoxelCapture.cpp  VoxelCapture.h
gECPP/GL/: Binary.cpp  Binary.h  GL.h  GLMath.h  Math.h  Type.h
gECPP/Graphics/: Graphics.h  Macro.h
gECPP/Math/: Math.h  Transform.h
gECPP/Physics/: Physics.h  Physics.inl  Shapes.cpp  Shapes.h  Shapes.inl
gECPP/Renderer/: Buffers.h  DefaultPipeline.cpp  DefaultPipeline.h  Material.h  SDFPipeline.cpp  SDFPipeline.h  VoxelPipeline.cpp  VoxelPipeline.h
gECPP/Serializable/: Asset.cpp  Asset.h  Asset.inl  Macro.h  Reflectable.h  Serializable.h
gECPP/Utility/: Array.h  AssetManager.h  Binary.cpp  Binary.h  Log.cpp  Log.h  Macro.h  Manager.h  Manager.inl  MemoryPool.h  Nullable.h  RelativePointer.h  TickHandler.h
gECPP/Window/: KeyboardState.cpp  KeyboardState.h  MouseState.h  Window.cpp  Window.h  WindowState.h
gECPP/gETF/: File.cpp  File.h  Mesh.h  Prototype.h  Serializable.h
gEModel/: Vertex.h  gETF.cpp  gETF.h  main.cpp
gEModel/Engine/: gEModelWindow.cpp  gEModelWindow.h
gEModel/gETF/: Binary.h  File.h  Prototype.h  Serializable.h  gETF.cpp
gEUI/: main.cpp
(+302 files in other folders)
