cmake_minimum_required(VERSION 3.20)
project(VoxelField)

set(CMAKE_CXX_STANDARD 23)

set(COMPILE_FLAGS_RELEASE "-O3 -static -s -static-libgcc -mwindows")
set(COMPILE_FLAGS_DEBUG "-O0 -DDEBUG -static -static-libgcc")

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${COMPILE_FLAGS_RELEASE}")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${COMPILE_FLAGS_RELEASE}")

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${COMPILE_FLAGS_DEBUG}")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${COMPILE_FLAGS_DEBUG}")

include_directories(Engine Vendor ${CMAKE_SOURCE_DIR})
set_property(GLOBAL PROPERTY CXX_STANDARD 20)

# JOLT
file(GLOB_RECURSE JOLT_SRC "Vendor/JOLT/*.cpp" "Vendor/JOLT/*.h")
add_library(JOLT STATIC ${JOLT_SRC})

# CityHash
file(GLOB_RECURSE CITYHASH_SRC "Vendor/CityHash/*.cpp" "Vendor/CityHash/*.h")
add_library(CITYHASH STATIC ${CITYHASH_SRC})

# SDL
add_library(SDL STATIC IMPORTED)
set_property(TARGET SDL PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/SDL3/bin/SDL3.dll")
FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/SDL3/bin/SDL3.dll" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# IMGUI
file(GLOB_RECURSE IMGUI_SRC "Vendor/IMGUI/*.cpp" "Vendor/IMGUI/*.h")
add_library(IMGUI STATIC ${IMGUI_SRC})
target_link_libraries(IMGUI)

# FastGLTF
file(GLOB_RECURSE FASTGLTF_SRC "Vendor/FastGLTF/*.cpp" "Vendor/FastGLTF/*.h")
add_library(FASTGLTF STATIC ${FASTGLTF_SRC})
target_link_libraries(FASTGLTF)

# ASSIMP
add_library(ASSIMP STATIC IMPORTED)
set_property(TARGET ASSIMP PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/ASSIMP/bin/libassimp-5.dll")
FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/ASSIMP/bin/libassimp-5.dll" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# FMOD
add_library(FMOD STATIC IMPORTED)
set_property(TARGET FMOD PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/FMOD/bin/fmod.dll")
FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/FMOD/bin/fmod.dll" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_library(FMOD_STUDIO STATIC IMPORTED)
set_property(TARGET FMOD_STUDIO PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/FMOD/bin/fmodstudio.dll")
FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/FMOD/bin/fmodstudio.dll" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# GLAD
add_library(GLAD STATIC Vendor/GLAD/glad.c Vendor/GLAD/glad.h)

# GECPP
file(GLOB_RECURSE GECPP_SRC "Engine/*.cpp" "Engine/*.h" "Engine/*.inl")
add_library(gECPP STATIC ${GECPP_SRC})
target_compile_definitions(gECPP PUBLIC API_ID=API_GL GE_ENABLE_EDITOR GE_ENABLE_IMGUI)
target_link_libraries(gECPP PUBLIC FMOD FMOD_STUDIO GLAD SDL JOLT CITYHASH IMGUI ASSIMP FASTGLTF)

# VOXELDEMO
file(GLOB_RECURSE VOXELDEMO_SRC "Demo/*.cpp" "Demo/*.h" "Demo/*.inl")
add_executable(VoxelDemo ${VOXELDEMO_SRC})
target_link_libraries(VoxelDemo gECPP)